feat(task-146): extract path parameters for @Create and @Update methods